--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "amazeui-react": "^1.2.3",
+    "axios": "^0.16.1",
     "bootstrap": "^3.3.7",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-actions": "^2.0.2",
+    "redux-promise": "^0.5.3"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
